--- a/oweval/stacks/dev/docker-compose.yml
+++ b/oweval/stacks/dev/docker-compose.yml
@@ -383,63 +383,76 @@ services:
       - bind
       - php
       - httpd
-
-  # -----------------------------------------------------------------------------------------------
-  # ELK Stack
-  # -----------------------------------------------------------------------------------------------
-  elastic:
-    image: docker.elastic.co/elasticsearch/elasticsearch:${ELK_SERVER:-6.6.1}
-    hostname: elastic
+      
+  mailhog:
+    image: mailhog/mailhog:${MAILHOG_SERVER:-latest}
+    hostname: mailhog
     ports:
-      - "${LOCAL_LISTEN_ADDR}${HOST_PORT_ELK_ELASTIC:-9200}:9200"
+      - "${LOCAL_LISTEN_ADDR}${HOST_PORT_MAILHOG:-8025}:8025"
     networks:
       app_net:
-        ipv4_address: 172.16.238.240
-    environment:
-      - TZ=${TIMEZONE:-UTC}
-      - discovery.type=single-node
-    volumes:
-      - devilbox-elastic:/usr/share/elasticsearch/data
-
-  logstash:
-    image: docker.elastic.co/logstash/logstash:${ELK_SERVER:-6.6.1}
-    hostname: logstash
-    ports:
-      - "${LOCAL_LISTEN_ADDR}${HOST_PORT_ELK_LOGSTASH:-9600}:9600"
-      - "${LOCAL_LISTEN_ADDR}${FILEBEAT_PORT_ELK_LOGSTASH:-5044}:5044"
-    networks:
-      app_net:
-        ipv4_address: 172.16.238.241
-    environment:
-      - TZ=${TIMEZONE:-UTC}
-      - LOG_LEVEL=info
-      - HTTP_HOST=0.0.0.0
-      - HTTP_PORT=9600
-      - CONFIG_RELOAD_AUTOMATIC=true
-      - CONFIG_RELOAD_INTERVAL=300
-      - DB_HOST=DATABASE-SERVER
-    volumes:
-      - devilbox-logstash:/var/lib/logstash
-      - ${DEVILBOX_PATH}/cfg/logstash/config:/usr/share/logstash/config
-      - ${DEVILBOX_PATH}/cfg/logstash/pipeline:/usr/share/logstash/pipeline
+        ipv4_address: 172.16.238.201
     depends_on:
-      - elastic
+      - bind
+      - php
+      - httpd
 
-  kibana:
-    image: docker.elastic.co/kibana/kibana:${ELK_SERVER:-6.6.1}
-    hostname: kibana
-    ports:
-      - "${LOCAL_LISTEN_ADDR}${HOST_PORT_ELK_KIBANA:-5601}:5601"
-    networks:
-      app_net:
-        ipv4_address: 172.16.238.242
-    environment:
-      - TZ=${TIMEZONE:-UTC}
-      - ELASTICSEARCH_URL=http://elastic:9200
-    volumes:
-      - ${DEVILBOX_PATH}/cfg/kibana/kibana.yml:/usr/share/kibana/config/kibana.yml
-    depends_on:
-      - elastic
+  # # -----------------------------------------------------------------------------------------------
+  # # ELK Stack
+  # # -----------------------------------------------------------------------------------------------
+  # elastic:
+  #   image: docker.elastic.co/elasticsearch/elasticsearch:${ELK_SERVER:-6.6.1}
+  #   hostname: elastic
+  #   ports:
+  #     - "${LOCAL_LISTEN_ADDR}${HOST_PORT_ELK_ELASTIC:-9200}:9200"
+  #   networks:
+  #     app_net:
+  #       ipv4_address: 172.16.238.240
+  #   environment:
+  #     - TZ=${TIMEZONE:-UTC}
+  #     - discovery.type=single-node
+  #   volumes:
+  #     - devilbox-elastic:/usr/share/elasticsearch/data
+  #
+  # logstash:
+  #   image: docker.elastic.co/logstash/logstash:${ELK_SERVER:-6.6.1}
+  #   hostname: logstash
+  #   ports:
+  #     - "${LOCAL_LISTEN_ADDR}${HOST_PORT_ELK_LOGSTASH:-9600}:9600"
+  #     - "${LOCAL_LISTEN_ADDR}${FILEBEAT_PORT_ELK_LOGSTASH:-5044}:5044"
+  #   networks:
+  #     app_net:
+  #       ipv4_address: 172.16.238.241
+  #   environment:
+  #     - TZ=${TIMEZONE:-UTC}
+  #     - LOG_LEVEL=info
+  #     - HTTP_HOST=0.0.0.0
+  #     - HTTP_PORT=9600
+  #     - CONFIG_RELOAD_AUTOMATIC=true
+  #     - CONFIG_RELOAD_INTERVAL=300
+  #     - DB_HOST=DATABASE-SERVER
+  #   volumes:
+  #     - devilbox-logstash:/var/lib/logstash
+  #     - ${DEVILBOX_PATH}/cfg/logstash/config:/usr/share/logstash/config
+  #     - ${DEVILBOX_PATH}/cfg/logstash/pipeline:/usr/share/logstash/pipeline
+  #   depends_on:
+  #     - elastic
+  #
+  # kibana:
+  #   image: docker.elastic.co/kibana/kibana:${ELK_SERVER:-6.6.1}
+  #   hostname: kibana
+  #   ports:
+  #     - "${LOCAL_LISTEN_ADDR}${HOST_PORT_ELK_KIBANA:-5601}:5601"
+  #   networks:
+  #     app_net:
+  #       ipv4_address: 172.16.238.242
+  #   environment:
+  #     - TZ=${TIMEZONE:-UTC}
+  #     - ELASTICSEARCH_URL=http://elastic:9200
+  #   volumes:
+  #     - ${DEVILBOX_PATH}/cfg/kibana/kibana.yml:/usr/share/kibana/config/kibana.yml
+  #   depends_on:
+  #     - elastic
 ################################################################################
 # NETWORK
 ################################################################################
