add redis port and build again

--- a/oweval/stacks/dev/docker-compose.yml
+++ b/oweval/stacks/dev/docker-compose.yml
@@ -375,6 +375,10 @@ services:
     environment:
       - REDIS_ARGS=${REDIS_ARGS:- }
 
+    ports:
+      # [local-machine:]local-port:docker-port
+      - "${LOCAL_LISTEN_ADDR}${HOST_PORT_REDIS}:6379"
+
     networks:
       app_net:
         ipv4_address: 172.16.238.14
