--- a/oweval/stacks/dev/docker-compose.yml
+++ b/oweval/stacks/dev/docker-compose.yml
@@ -10,8 +10,8 @@ services:
     hostname: bind
     restart: always
     ports:
-      - "${LOCAL_LISTEN_ADDR}${HOST_PORT_BIND:-1053}:53/tcp"
-      - "${LOCAL_LISTEN_ADDR}${HOST_PORT_BIND:-1053}:53/udp"
+      - "${HOST_PORT_BIND:-1053}:53/tcp"
+      - "${HOST_PORT_BIND:-1053}:53/udp"
 
     environment:
       ##
@@ -101,7 +101,7 @@ services:
 
     ports:
       # [local-machine:]local-port:docker-port
-      - "${LOCAL_LISTEN_ADDR}${HOST_PORT_MYSQL}:3306"
+      - "${HOST_PORT_MYSQL}:3306"
 
     networks:
       app_net:
@@ -113,10 +113,10 @@ services:
 
       # Mount devilbox user-defined cnf files in order
       # to overwrite the MySQL server configuration
-      - ${DEVILBOX_PATH}/cfg/${MYSQL_SERVER}:/etc/mysql/docker-default.d:ro${MOUNT_OPTIONS}
+      - ${DEVILBOX_PATH}/cfg/${MYSQL_SERVER}:/etc/mysql/docker-default.d:ro
 
       # Mount MySQL Data directory
-      - devilbox-${MYSQL_SERVER}:/var/lib/mysql:rw${MOUNT_OPTIONS}
+      - devilbox-${MYSQL_SERVER}:/var/lib/mysql:rw
 
     depends_on:
       - bind
@@ -213,48 +213,48 @@ services:
       # HOST-DIRECTORY : DOCKER-DIRECTORY
 
       # Mount default datadir
-      # - ${HOST_PATH_HTTPD_DEFAULT_DATADIR}:/var/www/default:ro${MOUNT_OPTIONS}
+      # - ${HOST_PATH_HTTPD_DEFAULT_DATADIR}:/var/www/default:ro
 
       # Mount custom mass virtual hosting
-      - ${HOST_PATH_HTTPD_DEFAULT_DATADIR}:/shared/httpd:rw${MOUNT_OPTIONS}
-      # - devilbox_test_code:/shared/httpd:rw${MOUNT_OPTIONS}
+      - ${HOST_PATH_HTTPD_DEFAULT_DATADIR}:/shared/httpd:rw
+      # - devilbox_test_code:/shared/httpd:rw
 
       # Mount logs
-      # - ${DEVILBOX_PATH}/log/php-fpm-${PHP_SERVER}:/var/log/php:rw${MOUNT_OPTIONS}
+      # - ${DEVILBOX_PATH}/log/php-fpm-${PHP_SERVER}:/var/log/php:rw
 
       # Mount Mail directory
-      # - devilbox-mail:/var/mail:rw${MOUNT_OPTIONS}
+      # - devilbox-mail:/var/mail:rw
 
       # Mount DB Backup directory
-      # - ${HOST_PATH_BACKUPDIR:-./backups}:/shared/backups:rw${MOUNT_OPTIONS}
+      # - ${HOST_PATH_BACKUPDIR:-./backups}:/shared/backups:rw
 
       # Mount devilbox user-defined *.ini files in order
       # to overwrite the default PHP.ini configuration
-      - ${DEVILBOX_PATH}/cfg/php-ini-${PHP_SERVER}:/etc/php-custom.d:ro${MOUNT_OPTIONS}
+      - ${DEVILBOX_PATH}/cfg/php-ini-${PHP_SERVER}:/etc/php-custom.d:ro
 
       # Mount devilbox user-defined PHP-FPM *.conf files in order
       # to overwrite the default PHP-FPM configuration
-      - ${DEVILBOX_PATH}/cfg/php-fpm-${PHP_SERVER}:/etc/php-fpm-custom.d:ro${MOUNT_OPTIONS}
+      - ${DEVILBOX_PATH}/cfg/php-fpm-${PHP_SERVER}:/etc/php-fpm-custom.d:ro
 
       # Mount devilbox user-defined *.so files in order
       # to load custom PHP modules
-      - ${DEVILBOX_PATH}/mod/php-fpm-${PHP_SERVER}:/usr/lib64/php/custom-modules:ro${MOUNT_OPTIONS}
+      - ${DEVILBOX_PATH}/mod/php-fpm-${PHP_SERVER}:/usr/lib64/php/custom-modules:ro
 
       # Mount devilbox user-defined PHP-FPM startup *.sh scripts
-      - ${DEVILBOX_PATH}/cfg/php-startup-${PHP_SERVER}:/startup.1.d:rw${MOUNT_OPTIONS}
-      - ${DEVILBOX_PATH}/autostart:/startup.2.d:rw${MOUNT_OPTIONS}
+      - ${DEVILBOX_PATH}/cfg/php-startup-${PHP_SERVER}:/startup.1.d:rw
+      - ${DEVILBOX_PATH}/autostart:/startup.2.d:rw
 
       # Mount devilbox user-defined bash config
-      - ${DEVILBOX_PATH}/bash:/etc/bashrc-devilbox.d:rw${MOUNT_OPTIONS}
+      - ${DEVILBOX_PATH}/bash:/etc/bashrc-devilbox.d:rw
 
       # Mount devilbox user-defined supervisord config
-      - ${DEVILBOX_PATH}/supervisor:/etc/supervisor/custom.d:rw${MOUNT_OPTIONS}
+      - ${DEVILBOX_PATH}/supervisor:/etc/supervisor/custom.d:rw
 
       # Certificate Authority public key
-      - ${DEVILBOX_PATH}/ca:/ca:rw${MOUNT_OPTIONS}
+      - ${DEVILBOX_PATH}/ca:/ca:rw
 
       # Users SSH directory (read-only)
-      - ~/.ssh:/home/devilbox/.ssh:ro${MOUNT_OPTIONS}
+      - ~/.ssh:/home/devilbox/.ssh:ro
 
     depends_on:
       - bind
@@ -299,7 +299,7 @@ services:
       - MAIN_VHOST_SSL_GEN=1
       - MAIN_VHOST_SSL_CN=${DEVILBOX_UI_SSL_CN:-localhost}
       - MAIN_VHOST_DOCROOT=${HTTPD_DOCROOT_DIR}
-      - MAIN_VHOST_TPL=${HTTPD_TEMPLATE_DIR}
+      # - MAIN_VHOST_TPL=HTTPD_TEMPLATE_DIR
       - MAIN_VHOST_STATUS_ENABLE=0
       - MAIN_VHOST_STATUS_ALIAS=
 
@@ -309,7 +309,7 @@ services:
       - MASS_VHOST_ENABLE=1
       - MASS_VHOST_TLD=.${TLD_SUFFIX}
       - MASS_VHOST_DOCROOT=${HTTPD_DOCROOT_DIR}
-      - MASS_VHOST_TPL=${HTTPD_TEMPLATE_DIR}
+      # - MASS_VHOST_TPL=HTTPD_TEMPLATE_DIR
       - MASS_VHOST_SSL_TYPE=${HTTPD_VHOST_SSL_TYPE:-both}
       - MASS_VHOST_SSL_GEN=1
 
@@ -326,8 +326,8 @@ services:
     ports:
       # ---- Format: ----
       # [HOST-ADDR : ] HOST-PORT : DOCKER-PORT
-      - "${LOCAL_LISTEN_ADDR}${HOST_PORT_HTTPD}:80"
-      - "${LOCAL_LISTEN_ADDR}${HOST_PORT_HTTPD_SSL}:443"
+      - "${HOST_PORT_HTTPD}:80"
+      - "${HOST_PORT_HTTPD_SSL}:443"
 
     networks:
       app_net:
@@ -339,23 +339,25 @@ services:
       # - devilbox_test_code:/var/www/default
 
       #default vhost path
-      # - ${HOST_PATH_HTTPD_DEFAULT_DATADIR}:/var/www/default:ro${MOUNT_OPTIONS}
+      # - ${HOST_PATH_HTTPD_DEFAULT_DATADIR}:/var/www/default:ro
 
       # Mount custom mass virtual hosting
-      - ${HOST_PATH_HTTPD_DEFAULT_DATADIR}:/shared/httpd:rw${MOUNT_OPTIONS}
-      # - devilbox_test_code:/shared/httpd:rw${MOUNT_OPTIONS}
+      # - ${HOST_PATH_HTTPD_DEFAULT_DATADIR}:/shared/httpd:rw
+      - ${HOST_PATH_HTTPD_DEFAULT_DATADIR}:/shared/httpd:rw
+      # - devilbox_test_code:/shared/httpd:rw
 
       # Mount custom web server config directory
-      - ${DEVILBOX_PATH}/cfg/${HTTPD_SERVER}:/etc/httpd-custom.d:rw${MOUNT_OPTIONS}
+      - ${DEVILBOX_PATH}/cfg/${HTTPD_SERVER}:/etc/httpd-custom.d:rw
+      # - ${DEVILBOX_PATH}/cfg/${HTTPD_SERVER}:/etc/httpd-custom.d:rw
 
       # Mount custom vhost-templates
-      - ${DEVILBOX_PATH}/cfg/vhost-gen:/etc/vhost-gen.d:rw${MOUNT_OPTIONS}
+      - ${DEVILBOX_PATH}/cfg/vhost-gen:/etc/vhost-gen.d:rw
 
       # Mount logs
-      # - ${DEVILBOX_PATH}/log/${HTTPD_SERVER}:/var/log/${HTTPD_SERVER}:rw${MOUNT_OPTIONS}
+      # - ${DEVILBOX_PATH}/log/${HTTPD_SERVER}:/var/log/${HTTPD_SERVER}:rw
 
       # Certificate Authority public key
-      - ${DEVILBOX_PATH}/ca:/ca:rw${MOUNT_OPTIONS}
+      - ${DEVILBOX_PATH}/ca:/ca:rw
 
     depends_on:
       - bind
@@ -377,7 +379,7 @@ services:
 
     ports:
       # [local-machine:]local-port:docker-port
-      - "${LOCAL_LISTEN_ADDR}${HOST_PORT_REDIS}:6379"
+      - "${HOST_PORT_REDIS}:6379"
 
     networks:
       app_net:
@@ -392,7 +394,7 @@ services:
     image: mailhog/mailhog:${MAILHOG_SERVER:-latest}
     hostname: mailhog
     ports:
-      - "${LOCAL_LISTEN_ADDR}${HOST_PORT_MAILHOG:-8025}:8025"
+      - "${HOST_PORT_MAILHOG:-8025}:8025"
     networks:
       app_net:
         ipv4_address: 172.16.238.201
@@ -407,7 +409,7 @@ services:
   #   image: docker.elastic.co/elasticsearch/elasticsearch:${ELK_SERVER:-6.6.1}
   #   hostname: elastic
   #   ports:
-  #     - "${LOCAL_LISTEN_ADDR}${HOST_PORT_ELK_ELASTIC:-9200}:9200"
+  #     - "${HOST_PORT_ELK_ELASTIC:-9200}:9200"
   #   networks:
   #     app_net:
   #       ipv4_address: 172.16.238.240
@@ -421,8 +423,8 @@ services:
   #   image: docker.elastic.co/logstash/logstash:${ELK_SERVER:-6.6.1}
   #   hostname: logstash
   #   ports:
-  #     - "${LOCAL_LISTEN_ADDR}${HOST_PORT_ELK_LOGSTASH:-9600}:9600"
-  #     - "${LOCAL_LISTEN_ADDR}${FILEBEAT_PORT_ELK_LOGSTASH:-5044}:5044"
+  #     - "${HOST_PORT_ELK_LOGSTASH:-9600}:9600"
+  #     - "${FILEBEAT_PORT_ELK_LOGSTASH:-5044}:5044"
   #   networks:
   #     app_net:
   #       ipv4_address: 172.16.238.241
@@ -445,7 +447,7 @@ services:
   #   image: docker.elastic.co/kibana/kibana:${ELK_SERVER:-6.6.1}
   #   hostname: kibana
   #   ports:
-  #     - "${LOCAL_LISTEN_ADDR}${HOST_PORT_ELK_KIBANA:-5601}:5601"
+  #     - "${HOST_PORT_ELK_KIBANA:-5601}:5601"
   #   networks:
   #     app_net:
   #       ipv4_address: 172.16.238.242
