varaibale is needed in httpd

--- a/oweval/stacks/dev/docker-compose.yml
+++ b/oweval/stacks/dev/docker-compose.yml
@@ -300,6 +300,7 @@ services:
       - MAIN_VHOST_SSL_CN=${DEVILBOX_UI_SSL_CN:-localhost}
       - MAIN_VHOST_DOCROOT=${HTTPD_DOCROOT_DIR}
       # - MAIN_VHOST_TPL=HTTPD_TEMPLATE_DIR
+      - MAIN_VHOST_TPL=
       - MAIN_VHOST_STATUS_ENABLE=0
       - MAIN_VHOST_STATUS_ALIAS=
 
@@ -309,7 +310,8 @@ services:
       - MASS_VHOST_ENABLE=1
       - MASS_VHOST_TLD=.${TLD_SUFFIX}
       - MASS_VHOST_DOCROOT=${HTTPD_DOCROOT_DIR}
-      # - MASS_VHOST_TPL=HTTPD_TEMPLATE_DIR
+      - MASS_VHOST_TPL=
+      # - MASS_VHOST_TPL=${HTTPD_TEMPLATE_DIR}
       - MASS_VHOST_SSL_TYPE=${HTTPD_VHOST_SSL_TYPE:-both}
       - MASS_VHOST_SSL_GEN=1
 
