--- a/oweval/stacks/dev/.env
+++ b/oweval/stacks/dev/.env
@@ -6,7 +6,7 @@ HTTPD_VHOST_SSL_TYPE=ssl
 HTTPD_TIMEOUT_TO_PHP_FPM=180
 HTTPD_DOCROOT_DIR=public
 HTTPD_TEMPLATE_DIR=
-LOCAL_LISTEN_ADDR=127.0.0.1
+LOCAL_LISTEN_ADDR=
 HOST_PATH_HTTPD_DEFAULT_DATADIR=./data/www
 HOST_PORT_HTTPD=8080
 HOST_PORT_HTTPD_SSL=10443
@@ -14,12 +14,11 @@ PHP_FPM_SERVER_PORT=9000
 DEBUG_COMPOSE_ENTRYPOINT=0
 PHP_SERVER=7.3
 HTTPD_SERVER=apache-2.4
-PHP_MODULES_DISABLE=
+PHP_MODULES_DISABLE=False
 PHP_MAIL_CATCH_ALL=
 MYSQL_ROOT_PASSWORD=root
 MYSQL_SERVER=mariadb-10.1
 HOST_PORT_MYSQL=3306
-MOUNT_OPTIONS=
 MEMCD_SERVER=1.4
 HOST_PORT_MEMCD=11211
 SSH_KEY=${cat ~/.ssh/id_rsa}
