--- a/oweval/stacks/dev/docker-compose.yml
+++ b/oweval/stacks/dev/docker-compose.yml
@@ -169,7 +169,7 @@ services:
       ## Enable/Disable PHP Modules
       ##
       # - ENABLE_MODULES=${PHP_MODULES_ENABLE}
-      - DISABLE_MODULES=${PHP_MODULES_DISABLE}
+      # - DISABLE_MODULES=${PHP_MODULES_DISABLE}
 
       ##
       ## Mail-catching
