--- a/oweval/stacks/dev/docker-compose.yml
+++ b/oweval/stacks/dev/docker-compose.yml
@@ -113,10 +113,10 @@ services:
 
       # Mount devilbox user-defined cnf files in order
       # to overwrite the MySQL server configuration
-      - ${DEVILBOX_PATH}/cfg/${MYSQL_SERVER}:/etc/mysql/docker-default.d:ro${MOUNT_OPTIONS}
+      - ${DEVILBOX_PATH}/cfg/${MYSQL_SERVER}:/etc/mysql/docker-default.d:ro
 
       # Mount MySQL Data directory
-      - devilbox-${MYSQL_SERVER}:/var/lib/mysql:rw${MOUNT_OPTIONS}
+      - devilbox-${MYSQL_SERVER}:/var/lib/mysql:rw
 
     depends_on:
       - bind
@@ -213,48 +213,48 @@ services:
       # HOST-DIRECTORY : DOCKER-DIRECTORY
 
       # Mount default datadir
-      # - ${HOST_PATH_HTTPD_DEFAULT_DATADIR}:/var/www/default:ro${MOUNT_OPTIONS}
+      # - ${HOST_PATH_HTTPD_DEFAULT_DATADIR}:/var/www/default:ro
 
       # Mount custom mass virtual hosting
-      - ${HOST_PATH_HTTPD_DEFAULT_DATADIR}:/shared/httpd:rw${MOUNT_OPTIONS}
-      # - devilbox_test_code:/shared/httpd:rw${MOUNT_OPTIONS}
+      - ${HOST_PATH_HTTPD_DEFAULT_DATADIR}:/shared/httpd:rw
+      # - devilbox_test_code:/shared/httpd:rw
 
       # Mount logs
-      # - ${DEVILBOX_PATH}/log/php-fpm-${PHP_SERVER}:/var/log/php:rw${MOUNT_OPTIONS}
+      # - ${DEVILBOX_PATH}/log/php-fpm-${PHP_SERVER}:/var/log/php:rw
 
       # Mount Mail directory
-      # - devilbox-mail:/var/mail:rw${MOUNT_OPTIONS}
+      # - devilbox-mail:/var/mail:rw
 
       # Mount DB Backup directory
-      # - ${HOST_PATH_BACKUPDIR:-./backups}:/shared/backups:rw${MOUNT_OPTIONS}
+      # - ${HOST_PATH_BACKUPDIR:-./backups}:/shared/backups:rw
 
       # Mount devilbox user-defined *.ini files in order
       # to overwrite the default PHP.ini configuration
-      - ${DEVILBOX_PATH}/cfg/php-ini-${PHP_SERVER}:/etc/php-custom.d:ro${MOUNT_OPTIONS}
+      - ${DEVILBOX_PATH}/cfg/php-ini-${PHP_SERVER}:/etc/php-custom.d:ro
 
       # Mount devilbox user-defined PHP-FPM *.conf files in order
       # to overwrite the default PHP-FPM configuration
-      - ${DEVILBOX_PATH}/cfg/php-fpm-${PHP_SERVER}:/etc/php-fpm-custom.d:ro${MOUNT_OPTIONS}
+      - ${DEVILBOX_PATH}/cfg/php-fpm-${PHP_SERVER}:/etc/php-fpm-custom.d:ro
 
       # Mount devilbox user-defined *.so files in order
       # to load custom PHP modules
-      - ${DEVILBOX_PATH}/mod/php-fpm-${PHP_SERVER}:/usr/lib64/php/custom-modules:ro${MOUNT_OPTIONS}
+      - ${DEVILBOX_PATH}/mod/php-fpm-${PHP_SERVER}:/usr/lib64/php/custom-modules:ro
 
       # Mount devilbox user-defined PHP-FPM startup *.sh scripts
-      - ${DEVILBOX_PATH}/cfg/php-startup-${PHP_SERVER}:/startup.1.d:rw${MOUNT_OPTIONS}
-      - ${DEVILBOX_PATH}/autostart:/startup.2.d:rw${MOUNT_OPTIONS}
+      - ${DEVILBOX_PATH}/cfg/php-startup-${PHP_SERVER}:/startup.1.d:rw
+      - ${DEVILBOX_PATH}/autostart:/startup.2.d:rw
 
       # Mount devilbox user-defined bash config
-      - ${DEVILBOX_PATH}/bash:/etc/bashrc-devilbox.d:rw${MOUNT_OPTIONS}
+      - ${DEVILBOX_PATH}/bash:/etc/bashrc-devilbox.d:rw
 
       # Mount devilbox user-defined supervisord config
-      - ${DEVILBOX_PATH}/supervisor:/etc/supervisor/custom.d:rw${MOUNT_OPTIONS}
+      - ${DEVILBOX_PATH}/supervisor:/etc/supervisor/custom.d:rw
 
       # Certificate Authority public key
-      - ${DEVILBOX_PATH}/ca:/ca:rw${MOUNT_OPTIONS}
+      - ${DEVILBOX_PATH}/ca:/ca:rw
 
       # Users SSH directory (read-only)
-      - ~/.ssh:/home/devilbox/.ssh:ro${MOUNT_OPTIONS}
+      - ~/.ssh:/home/devilbox/.ssh:ro
 
     depends_on:
       - bind
@@ -339,23 +339,23 @@ services:
       # - devilbox_test_code:/var/www/default
 
       #default vhost path
-      # - ${HOST_PATH_HTTPD_DEFAULT_DATADIR}:/var/www/default:ro${MOUNT_OPTIONS}
+      # - ${HOST_PATH_HTTPD_DEFAULT_DATADIR}:/var/www/default:ro
 
       # Mount custom mass virtual hosting
-      - ${HOST_PATH_HTTPD_DEFAULT_DATADIR}:/shared/httpd:rw${MOUNT_OPTIONS}
-      # - devilbox_test_code:/shared/httpd:rw${MOUNT_OPTIONS}
+      - ${HOST_PATH_HTTPD_DEFAULT_DATADIR}:/shared/httpd:rw
+      # - devilbox_test_code:/shared/httpd:rw
 
       # Mount custom web server config directory
-      - ${DEVILBOX_PATH}/cfg/${HTTPD_SERVER}:/etc/httpd-custom.d:rw${MOUNT_OPTIONS}
+      - ${DEVILBOX_PATH}/cfg/${HTTPD_SERVER}:/etc/httpd-custom.d:rw
 
       # Mount custom vhost-templates
-      - ${DEVILBOX_PATH}/cfg/vhost-gen:/etc/vhost-gen.d:rw${MOUNT_OPTIONS}
+      - ${DEVILBOX_PATH}/cfg/vhost-gen:/etc/vhost-gen.d:rw
 
       # Mount logs
-      # - ${DEVILBOX_PATH}/log/${HTTPD_SERVER}:/var/log/${HTTPD_SERVER}:rw${MOUNT_OPTIONS}
+      # - ${DEVILBOX_PATH}/log/${HTTPD_SERVER}:/var/log/${HTTPD_SERVER}:rw
 
       # Certificate Authority public key
-      - ${DEVILBOX_PATH}/ca:/ca:rw${MOUNT_OPTIONS}
+      - ${DEVILBOX_PATH}/ca:/ca:rw
 
     depends_on:
       - bind
