--- a/oweval/stacks/devilbox-test/.env
+++ b/oweval/stacks/devilbox-test/.env
@@ -5,7 +5,7 @@ BIND_DNS_RESOLVER=134.184.15.13,134.184.250.7
 HTTPD_VHOST_SSL_TYPE=ssl
 HTTPD_TIMEOUT_TO_PHP_FPM=180
 HTTPD_DOCROOT_DIR=public
-HTTPD_TEMPLATE_DIR=
+HTTPD_TEMPLATE_DIR=.
 LOCAL_LISTEN_ADDR=127.0.0.1
 HOST_PATH_HTTPD_DEFAULT_DATADIR=./data/www
 HOST_PORT_HTTPD=8080
