--- a/oweval/stacks/dev/.env
+++ b/oweval/stacks/dev/.env
@@ -6,7 +6,7 @@ HTTPD_VHOST_SSL_TYPE=ssl
 HTTPD_TIMEOUT_TO_PHP_FPM=180
 HTTPD_DOCROOT_DIR=public
 HTTPD_TEMPLATE_DIR=.devilbox
-LOCAL_LISTEN_ADDR=127.0.0.1
+LOCAL_LISTEN_ADDR=127.0.0.1:
 HOST_PATH_HTTPD_DEFAULT_DATADIR=./data/www
 HOST_PORT_HTTPD=8080
 HOST_PORT_HTTPD_SSL=10443
