--- a/oweval/stacks/dev/docker-compose.yml
+++ b/oweval/stacks/dev/docker-compose.yml
@@ -10,8 +10,8 @@ services:
     hostname: bind
     restart: always
     ports:
-      - "${LOCAL_LISTEN_ADDR}${HOST_PORT_BIND:-1053}:53/tcp"
-      - "${LOCAL_LISTEN_ADDR}${HOST_PORT_BIND:-1053}:53/udp"
+      - "${HOST_PORT_BIND:-1053}:53/tcp"
+      - "${HOST_PORT_BIND:-1053}:53/udp"
 
     environment:
       ##
@@ -101,7 +101,7 @@ services:
 
     ports:
       # [local-machine:]local-port:docker-port
-      - "${LOCAL_LISTEN_ADDR}${HOST_PORT_MYSQL}:3306"
+      - "${HOST_PORT_MYSQL}:3306"
 
     networks:
       app_net:
@@ -326,8 +326,8 @@ services:
     ports:
       # ---- Format: ----
       # [HOST-ADDR : ] HOST-PORT : DOCKER-PORT
-      - "${LOCAL_LISTEN_ADDR}${HOST_PORT_HTTPD}:80"
-      - "${LOCAL_LISTEN_ADDR}${HOST_PORT_HTTPD_SSL}:443"
+      - "${HOST_PORT_HTTPD}:80"
+      - "${HOST_PORT_HTTPD_SSL}:443"
 
     networks:
       app_net:
@@ -392,7 +392,7 @@ services:
     image: mailhog/mailhog:${MAILHOG_SERVER:-latest}
     hostname: mailhog
     ports:
-      - "${LOCAL_LISTEN_ADDR}${HOST_PORT_MAILHOG:-8025}:8025"
+      - "${HOST_PORT_MAILHOG:-8025}:8025"
     networks:
       app_net:
         ipv4_address: 172.16.238.201
@@ -407,7 +407,7 @@ services:
   #   image: docker.elastic.co/elasticsearch/elasticsearch:${ELK_SERVER:-6.6.1}
   #   hostname: elastic
   #   ports:
-  #     - "${LOCAL_LISTEN_ADDR}${HOST_PORT_ELK_ELASTIC:-9200}:9200"
+  #     - "${HOST_PORT_ELK_ELASTIC:-9200}:9200"
   #   networks:
   #     app_net:
   #       ipv4_address: 172.16.238.240
@@ -421,8 +421,8 @@ services:
   #   image: docker.elastic.co/logstash/logstash:${ELK_SERVER:-6.6.1}
   #   hostname: logstash
   #   ports:
-  #     - "${LOCAL_LISTEN_ADDR}${HOST_PORT_ELK_LOGSTASH:-9600}:9600"
-  #     - "${LOCAL_LISTEN_ADDR}${FILEBEAT_PORT_ELK_LOGSTASH:-5044}:5044"
+  #     - "${HOST_PORT_ELK_LOGSTASH:-9600}:9600"
+  #     - "${FILEBEAT_PORT_ELK_LOGSTASH:-5044}:5044"
   #   networks:
   #     app_net:
   #       ipv4_address: 172.16.238.241
@@ -445,7 +445,7 @@ services:
   #   image: docker.elastic.co/kibana/kibana:${ELK_SERVER:-6.6.1}
   #   hostname: kibana
   #   ports:
-  #     - "${LOCAL_LISTEN_ADDR}${HOST_PORT_ELK_KIBANA:-5601}:5601"
+  #     - "${HOST_PORT_ELK_KIBANA:-5601}:5601"
   #   networks:
   #     app_net:
   #       ipv4_address: 172.16.238.242
