--- a/oweval/stacks/devilbox-test/.env
+++ b/oweval/stacks/devilbox-test/.env
@@ -14,7 +14,7 @@ PHP_FPM_SERVER_PORT=9000
 DEBUG_COMPOSE_ENTRYPOINT=0
 PHP_SERVER=7.4
 HTTPD_SERVER=apache-2.4
-PHP_MODULES_DISABLE=False
+PHP_MODULES_DISABLE=psr
 PHP_MAIL_CATCH_ALL=
 MYSQL_ROOT_PASSWORD=root
 MYSQL_SERVER=mariadb-10.5
