--- a/oweval/stacks/dev/docker-compose.yml
+++ b/oweval/stacks/dev/docker-compose.yml
@@ -168,8 +168,8 @@ services:
       ##
       ## Enable/Disable PHP Modules
       ##
-      # - ENABLE_MODULES=${PHP_MODULES_ENABLE}
-      # - DISABLE_MODULES=${PHP_MODULES_DISABLE}
+      - ENABLE_MODULES=${PHP_MODULES_ENABLE}
+      - DISABLE_MODULES=${PHP_MODULES_DISABLE}
 
       ##
       ## Mail-catching
