--- a/oweval/stacks/dev/docker-compose.yml
+++ b/oweval/stacks/dev/docker-compose.yml
@@ -131,7 +131,8 @@ services:
     # image: ../images/php-fpm-test-73
 
     hostname: php
-
+    extra_hosts:
+      - host.docker.internal:host-gateway
     ##
     ## All .env variables
     ##
